--- a/Indexx.html
+++ b/Indexx.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />/
         <title>Babylon.js sample code</title>
         <!-- Babylon.js -->
-        <script src="http://www.babylonjs.com/hand.minified-1.2.js"></script>
-        <script src="http://www.babylonjs.com/cannon.js"></script>
-        <script src="http://www.babylonjs.com/oimo.js"></script>
-        <script src="http://www.babylonjs.com/babylon.js"></script>
+        <script src="hand.minified-1.2.js"></script>
+        <script src="cannon.js"></script>
+        <script src="oimo.js"></script>
+        <script src="babylon.js"></script>
         <style>
             html, body {
                 overflow: hidden;
