--- a/MyGame.html
+++ b/MyGame.html
@@ -68,7 +68,7 @@ var trick =engine.setHardwareScalingLevel(1.5);
 BABYLON.SceneLoader.ShowLoadingScreen = true;
 
 
-        BABYLON.SceneLoader.Load("Sponza/", "Sponza.babylon", engine, function (newScene) {
+        BABYLON.SceneLoader.Load("Scenes/Sponza/", "Sponza.babylon", engine, function (newScene) {
 
 //game sound
 var music = new BABYLON.Sound("Violons", "sound.mp3", newScene, null, { loop: true, autoplay: true });
