--- a/New.htm
+++ b/New.htm
@@ -195,9 +195,9 @@ score--;
 if(score === 0){
 var over = document.getElementById("ammoLabel");
 over.style.color = "red";
-over.style.fontSize = "150px";
+//over.style.fontSize = "150px";
 over.style.top = "140px";
-over.innerHTML = "Game Over!"
+//over.innerHTML = "Game Over!"
 enemy.freezeWorldMatrix();
 };
 var fire;
